--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPAtoqjj85HPxkvJFSvAnK8",
+      "authorship_tag": "ABX9TyM42qtRox6mtRviPsO9g64E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,104 +62,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S-NYRxs4SuLf",
-        "outputId": "396bb2c8-2e6a-47a9-cf5c-b339db70ddf0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "S-NYRxs4SuLf"
       },
       "source": [
-        "# haskell stack のインストール\n",
+        "# haskell(ghc)のインストール\n",
         "\n",
-        "!curl -sSL https://get.haskellstack.org/ | sh\n"
+        "!apt install ghc\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Detected Linux distribution: ubuntu\n",
-            "\n",
-            "Installing dependencies...\n",
-            "\n",
-            "\n",
-            "About to use 'sudo' to run the following command as root:\n",
-            "    apt-get install -y libffi-dev libgmp-dev netbase\n",
-            "in order to install required system dependencies.\n",
-            "\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libgmpxx4ldbl\n",
-            "Suggested packages:\n",
-            "  gmp-doc libgmp10-doc libmpfr-dev\n",
-            "The following NEW packages will be installed:\n",
-            "  libffi-dev libgmp-dev libgmpxx4ldbl netbase\n",
-            "0 upgraded, 4 newly installed, 0 to remove and 12 not upgraded.\n",
-            "Need to get 494 kB of archives.\n",
-            "After this operation, 2,075 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/main amd64 netbase all 5.4 [12.7 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmpxx4ldbl amd64 2:6.1.2+dfsg-2 [8,964 B]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmp-dev amd64 2:6.1.2+dfsg-2 [316 kB]\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu bionic/main amd64 libffi-dev amd64 3.2.1-8 [156 kB]\n",
-            "Fetched 494 kB in 2s (247 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 4.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package netbase.\n",
-            "(Reading database ... 144786 files and directories currently installed.)\n",
-            "Preparing to unpack .../archives/netbase_5.4_all.deb ...\n",
-            "Unpacking netbase (5.4) ...\n",
-            "Selecting previously unselected package libgmpxx4ldbl:amd64.\n",
-            "Preparing to unpack .../libgmpxx4ldbl_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
-            "Unpacking libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Selecting previously unselected package libgmp-dev:amd64.\n",
-            "Preparing to unpack .../libgmp-dev_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
-            "Unpacking libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Selecting previously unselected package libffi-dev:amd64.\n",
-            "Preparing to unpack .../libffi-dev_3.2.1-8_amd64.deb ...\n",
-            "Unpacking libffi-dev:amd64 (3.2.1-8) ...\n",
-            "Setting up libffi-dev:amd64 (3.2.1-8) ...\n",
-            "Setting up libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Setting up netbase (5.4) ...\n",
-            "Setting up libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1.2) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n",
-            "\n",
-            "Using generic bindist...\n",
-            "\n",
-            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100   145  100   145    0     0    181      0 --:--:-- --:--:-- --:--:--   181\n",
-            "100   655  100   655    0     0    550      0  0:00:01  0:00:01 --:--:--  1904\n",
-            "100 13.8M  100 13.8M    0     0  3547k      0  0:00:03  0:00:03 --:--:-- 7077k\n",
-            "Installing Stack to: /usr/local/bin/stack...\n",
-            "\n",
-            "-------------------------------------------------------------------------------\n",
-            "\n",
-            "Stack has been installed to: /usr/local/bin/stack\n",
-            "\n",
-            "WARNING: '/root/.local/bin' is not on your PATH.\n",
-            "    Stack will place the binaries it builds in '/root/.local/bin' so\n",
-            "    for best results, please add it to the beginning of PATH in your profile.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "uFBBZYLDS8Ed",
-        "outputId": "2fb6b2c1-4919-4923-c41a-6010bfb423e3",
+        "outputId": "4d67186c-acdd-48e1-e53f-b982199519f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,14 +84,14 @@
       "source": [
         "# インストールされたことの確認\n",
         "\n",
-        "!stack --version\n"
+        "!ghc --version\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/bin/bash: stack: command not found\n"
+            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
           ],
           "name": "stdout"
         }
@@ -184,7 +101,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ba2HY_gpTx4I",
-        "outputId": "4bb6a72c-5897-4d3f-926f-a1c119b19dd7",
+        "outputId": "0db37e2a-daa8-4e65-feff-4143c4ae044c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -194,7 +111,7 @@
         "\n",
         "main = putStrLn \"hello, world\""
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,26 +126,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "SvIkXNjIU6iv",
-        "outputId": "991b4021-e052-41ef-d64b-6902a7836e16",
+        "outputId": "1fe77e97-c318-410f-eecc-bbd3dee2d9ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!stack runghc hello.hs\n"
+        "!runghc hello.hs\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\u001b[0mWriting implicit global project config file to: /root/.stack/global-project/stack.yaml\u001b[0m\n",
-            "\u001b[0mNote: You can change the snapshot via the resolver field there.\u001b[0m\n",
-            "\u001b[0mUsing latest snapshot resolver: lts-16.20\u001b[0m\n",
-            "\u001b[0mPreparing to install GHC to an isolated location.\u001b[0m\n",
-            "\u001b[0mThis will not interfere with any system-level installation.\u001b[0m\n",
-            "Preparing to download ghc-8.8.4 ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4: download has begun\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                             \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  703.32 KiB / 197.63 MiB (  0.35%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:   11.33 MiB / 197.63 MiB (  5.73%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:   23.84 MiB / 197.63 MiB ( 12.06%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:   36.37 MiB / 197.63 MiB ( 18.40%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:   49.05 MiB / 197.63 MiB ( 24.82%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:   62.09 MiB / 197.63 MiB ( 31.42%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:   75.36 MiB / 197.63 MiB ( 38.13%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:   88.61 MiB / 197.63 MiB ( 44.83%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  101.94 MiB / 197.63 MiB ( 51.58%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  115.25 MiB / 197.63 MiB ( 58.31%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  128.59 MiB / 197.63 MiB ( 65.07%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  141.90 MiB / 197.63 MiB ( 71.80%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  155.31 MiB / 197.63 MiB ( 78.59%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  168.87 MiB / 197.63 MiB ( 85.45%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  182.47 MiB / 197.63 MiB ( 92.33%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  195.97 MiB / 197.63 MiB ( 99.16%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bghc-8.8.4:  197.63 MiB / 197.63 MiB (100.00%) downloaded...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\u001b[0mDownloaded ghc-8.8.4.\u001b[0m\n",
-            "Unpacking GHC into /root/.stack/programs/x86_64-linux/ghc-8.8.4.temp/ ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                                         \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bConfiguring GHC ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bInstalling GHC ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                  \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\u001b[0mInstalled GHC.\u001b[0m\n",
             "hello, world\n"
           ],
           "name": "stdout"
@@ -1006,7 +916,7 @@
         "!stack eval $':t [\\'a\\' .. \\'c\\']'\n",
         "!stack eval $':t [(\\'x\\', True), (\\'y\\', False)]'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,7 +942,7 @@
         "!stack eval 'snd (1, 2)'\n",
         "!stack eval 'map fst [(1, 2), (3, 4), (5, 6)]'"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
