--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOfXsaIKlUp/wGY/awZh0Xp",
+      "authorship_tag": "ABX9TyOcqaCwXrQEvbqYBQa51OWL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3030,15 +3030,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WwmbzTU9OULn"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "nLP0EvwueSsx"
       },
       "source": [
@@ -3119,15 +3110,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "do-J_zROdf5Q"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Bog1bWnRhO97"
       },
       "source": [
@@ -3146,26 +3128,71 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uENuKTdjRcci"
+        "id": "uENuKTdjRcci",
+        "outputId": "4dd84186-1851-4ef0-a3de-c1d5365101eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile transform.cpp\n",
         "\n",
-        "\n"
+        "#include <iostream>\n",
+        "\n",
+        "int main() {\n",
+        "    std::string str, com, p;\n",
+        "    int q, a, b;\n",
+        "    std::cin >> str >> q;\n",
+        "\n",
+        "    for (int i = 0; i < q; i++) {\n",
+        "        std::cin >> com >> a >> b;\n",
+        "        if (com == \"print\")\n",
+        "            std::cout << str.substr(a, b - a + 1);\n",
+        "        else if (com == \"reverse\") {\n",
+        "            std::string tmp = str.substr(a, b - a + 1);\n",
+        "            int n = tmp.size();\n",
+        "            for (int i = 0; i < n; i++) str[i + a] = tmp[n - i - 1];\n",
+        "        } else if (com == \"replace\") {\n",
+        "            std::cin >> p;\n",
+        "            str = str.replace(a, b - a + 1, p);\n",
+        "        }\n",
+        "    }\n",
+        "    return 0;\n",
+        "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting transform.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NMNGyfkXRc-O"
+        "id": "NMNGyfkXRc-O",
+        "outputId": "09b85ae6-9f68-4b9d-98a4-60ceb1352d16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!g++ transform.cpp -o transform; echo 3 cat dog fish fish lion tiger |./transform"
+        "!g++ transform.cpp -o transform; echo abcde 3 replace 1 3 xyz reverse 0 2 print 1 4 |./transform"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "xaze"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3174,7 +3201,77 @@
       },
       "source": [
         "### ITP1_10_A: Distance\n",
-        "\n"
+        "点 $P1(x1, y1)$, $P2(x2, y2)$ の距離を求める。\n",
+        "\n",
+        "例: 0 0 1 1 => 1.41421356\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0S2V-lI2vACx",
+        "outputId": "8708324a-4f4c-4874-a637-119200439617",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile distancepoint01.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <iomanip>\n",
+        "#include <cmath>\n",
+        "\n",
+        "int main() {\n",
+        "    double x1, y1, x2, y2;\n",
+        "    std::cin >> x1 >> y1 >> x2 >> y2;\n",
+        "    double d = std::sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2));\n",
+        "    std::cout << std::fixed <<std::setprecision(8) << d << \"\\n\";\n",
+        "    \n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting distancepoint01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EN0IO1sYu_ki",
+        "outputId": "57819bec-00b6-4429-9e5f-6076a51cb945",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ distancepoint01.cpp -o distancepoint01; echo 0 0 1 1 |./distancepoint01"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.41421356\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KH7Xc8yGzIC-"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -3184,7 +3281,82 @@
       },
       "source": [
         "### ITP1_10_B: Triangle\n",
-        "\n"
+        "三角形の２辺 \"a\", \"b\" とその間の角 \"C\" から、その三角形の面積 \"S\"、周の長さ \"L\", \"a\" を底辺としたときの高さ \"h\" を求める。\n",
+        "\n",
+        "例: 4 3 90 =>   \n",
+        "6.00000000  \n",
+        "12.00000000  \n",
+        "3.00000000  \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QXxxdLhc03Wp",
+        "outputId": "f3b9c3c5-11c5-4a16-f023-6dd918251978",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile triangle01.cpp\n",
+        "\n",
+        "#include <cmath>\n",
+        "#include <iomanip>\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main() {\n",
+        "    int a, b, C;\n",
+        "    double S, L, h, d;\n",
+        "    std::cin >> a >> b >> C;\n",
+        "\n",
+        "    d = (acos(-1.0) * C) / 180.0;\n",
+        "    S = a * b * sin(d) / 2.0;\n",
+        "    L = a + b + sqrt(a * a + b * b - 2 * a * b * cos(d));\n",
+        "    h = b * sin(d);\n",
+        "\n",
+        "    std::cout << std::fixed <<std::setprecision(8) << S << \"\\n\";\n",
+        "    std::cout << std::fixed <<std::setprecision(8) << L << \"\\n\";\n",
+        "    std::cout << std::fixed <<std::setprecision(8) << h << \"\\n\";\n",
+        "\n",
+        "\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting triangle01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6xW8WDCF03sl",
+        "outputId": "1805f2ca-b6b1-41dc-87df-83e237741ce3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ triangle01.cpp -o triangle01; echo 4 3 90 |./triangle01"
+      ],
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6.00000000\n",
+            "12.00000000\n",
+            "3.00000000\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -3193,7 +3365,92 @@
         "id": "WDreN0SVeXVw"
       },
       "source": [
-        "### ITP1_10_C: Standard Deviation\n"
+        "### ITP1_10_C: Standard Deviation\n",
+        "$n$ 人の学生の得点を$s_1, s_2 \\dots s_n$ としたときの、標準偏差を求める。\n",
+        "\n",
+        "分散 $\\alpha^2$ は次の式で求められる。\n",
+        "$$\n",
+        "\\alpha^2 = \\left( \\sum_{i=1}^n (s_i - m)^2\\right)/n\n",
+        "$$\n",
+        "\n",
+        "ここで $m$ は平均、$\\alpha$が標準偏差である。\n",
+        "\n",
+        "例: 5 70 80 100 90 20 3 80 80 80 0 =>  \n",
+        "27.85677655  \n",
+        "0.00000000  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AGHplH9Q29dZ",
+        "outputId": "c2b5fde0-31f1-4942-9576-03cdbcd04151",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile standarddeviation.cpp\n",
+        "\n",
+        "#include <cmath>\n",
+        "#include <iomanip>\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main() {\n",
+        "    int n, A[1000];\n",
+        "\n",
+        "    while (1) {\n",
+        "        std::cin >> n;\n",
+        "        if (n == 0) break;\n",
+        "\n",
+        "        for (int i = 0; i < n; i++) std::cin >> A[i];\n",
+        "        int sum = 0;\n",
+        "        for (int i = 0; i < n; i++) sum += A[i];\n",
+        "        double avg = 1.0*sum/n;\n",
+        "        double dist = 0.0;\n",
+        "        for (int i = 0; i < n; i++) {\n",
+        "            dist += (avg - A[i]) * (avg - A[i]);\n",
+        "        }\n",
+        "\n",
+        "        std::cout << std::fixed << std::setprecision(8) << sqrt(dist/n) << \"\\n\";\n",
+        "\n",
+        "    }\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting standarddeviation.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9CCdOA9r29Pr",
+        "outputId": "28c89dd9-7434-4740-9503-3829a5696af3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ standarddeviation.cpp -o standarddeviation; echo 5 70 80 100 90 20 3 80 80 80 0 |./standarddeviation"
+      ],
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "27.85677655\n",
+            "0.00000000\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
